--- a/lesson_04/css/style.css
+++ b/lesson_04/css/style.css
@@ -30,7 +30,7 @@ body {
    color: red;
    font-weight: 700;
    font-style: normal;
-   text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
+   text-shadow: 1px 2px 2px #00000080;
 }
 p > a {
    color: rgb(28, 98, 156);
@@ -40,7 +40,7 @@ p > a {
    letter-spacing: 0.8px;
 }
 .tasks {
-   word-wrap: none;
+   word-wrap: break-word;
 }
 [class$="-title"] {
    font-weight: 700;
