--- a/lesson_05/css/reset.css
+++ b/lesson_05/css/reset.css
@@ -1,79 +1,65 @@
-* {
+*,
+*::before,
+*::after {
    padding: 0;
    margin: 0;
-   border: 0;
-}
+   border: none;
 
-*,
-*:before,
-*:after {
-   -moz-box-sizing: border-box;
-   -webkit-box-sizing: border-box;
    box-sizing: border-box;
 }
-
-:focus,
-:active {
-   outline: none;
+*::before,
+*::after {
+   display: inline-block;
 }
-a:focus,
-a:active {
-   outline: none;
-}
-
-nav,
-footer,
-header,
-aside {
-   display: block;
-}
-
-html,
-body {
-   height: 100%;
-   width: 100%;
-   line-height: 1;
-   -ms-text-size-adjust: 100%;
-   -moz-text-size-adjust: 100%;
-   -webkit-text-size-adjust: 100%;
-}
-
-input,
-button,
-textarea {
-   font-family: inherit;
-}
-
-input::-ms-clear {
-   display: none;
-}
-button {
-   cursor: pointer;
-}
-button::-moz-focus-inner {
-   padding: 0;
-   border: 0;
-}
-a,
-a:visited {
+a {
    text-decoration: none;
+   color: inherit;
+   display: inline-block;
 }
-a:hover {
-   text-decoration: none;
-}
-ul li {
+li {
    list-style: none;
 }
 img {
    vertical-align: top;
 }
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
+   font-weight: inherit;
    font-size: inherit;
-   font-weight: 400;
+}
+html,
+body {
+   line-height: 1;
+   height: 100%;
+}
+
+/* FORM */
+input,
+button,
+textarea {
+   font-family: inherit;
+   font-size: inherit;
+   line-height: inherit;
+   color: inherit;
+   background-color: transparent;
+}
+input,
+textarea {
+   width: 100%;
+}
+
+button,
+select,
+option {
+   cursor: pointer;
+}
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+   appearance: none;
 }
