--- a/lesson_05/css/style.css
+++ b/lesson_05/css/style.css
@@ -6,188 +6,209 @@ body {
    box-sizing: border-box;
    text-align: center;
    font-family: "Manrope", Arial, Helvetica, sans-serif;
+   font-weight: 400;
 }
-.lessons {
+.wrapper {
+   min-height: 100%;
+
+   overflow: hidden;
+}
+p {
+   margin-block-end: 10px;
+}
+[class*="-container"] {
    margin: 0 auto;
-   background-color: lightgray;
-}
-.lessons h1 {
-   font-size: 58px;
-   font-weight: 700;
-   line-height: 2.6;
 }
 
-[class^="task-"] {
+/* [class^="task-"] {
    margin-block: 5px;
+} */
+header {
+   background-color: lightgray;
+   padding-block: 20px;
+   /* font-size: 0px; */
+}
+h1 {
+   font-size: 58px;
+   font-weight: 700;
 }
 
 /* ==========================Task One ======================*/
 .task-one {
+   background-color: #141414;
+   color: #999999;
    padding-block: 150px;
+   text-align: left;
+}
+.task-one-container {
+   max-width: 1627px;
+   padding-inline: 15px;
    margin: 0 auto;
 }
-.one {
-   text-align: left;
-   color: #ffffff;
-   max-width: 1620px;
-
-   background-color: #141414;
+.task-one-header {
+   margin-block-end: 80px;
 }
-.one-title {
+.header-one {
+   max-width: 1297px;
+}
+.header-one-title {
+   margin-block-end: 14px;
+   color: #ffffff;
    font-size: 38px;
    font-weight: 700;
    line-height: 1.5;
-   margin-block-end: 14px;
 }
-.one .one-subtitle {
-   color: #999999;
-   line-height: 1.5; /* 27/18 */
-   max-width: 1297px;
+.header-one-text {
+   line-height: 1.5;
 }
-
-.one-content {
-   margin-block-start: 80px;
-   margin-inline-start: -15px;
-   margin-inline-end: -90px;
+.task-one-items {
+   margin-inline-start: -30px;
+   margin-inline-end: -30px;
 }
-.one-content-item {
-   /* display: inline-block; */
+.task-one-item {
+   display: inline-block;
+   margin: 15px;
+   max-width: 31%;
    padding: 50px;
    border-radius: 12px;
    border: 1px solid #262626;
+   border-radius: 12px;
+   border: 1px solid #262626;
    background: linear-gradient(222deg, rgba(229, 0, 0, 0.5) -208.03%, rgba(229, 0, 0, 0) 41.32%), #0f0f0f;
-   /* margin-block-end: 30px;
-   margin-inline-end: 30px; */
-   max-width: 30%;
-}
-.item-one-content {
-   display: inline-block;
-   margin: 15px;
 }
 
-.item-one-content-header > * {
-   display: inline-block;
+.item-task-one-header {
    margin-block-end: 30px;
-   min-height: 72px;
 }
-.header-content-item-image {
-   padding: 5%; /* 16/324 */
+.item-task-one-header > * {
+   display: inline-block;
+   height: 72px;
+   vertical-align: middle;
+}
+.item-task-one-img {
+   padding: 5%; /* 72/16 */
    border-radius: 12px;
    border: 1px solid #1f1f1f;
    background: #141414;
-   margin-right: 16px;
+   margin-inline-end: 16px;
 }
-.header-content-item-title h3 {
-   font-size: 24px;
-   color: #ffffff;
-   font-weight: 600;
-   line-height: 1.5;
-   display: inline;
-   vertical-align: middle;
-}
-.item-one-content-text {
-   color: #999999;
-   line-height: 1.5;
-}
-/* ==========================Task Two ======================*/
-.task-two {
-   padding-block-start: 261px;
-   background-color: #ffffff;
-   font-family: Roboto, Arial, Helvetica, sans-serif;
-   padding-block-end: 180px;
+.item-task-one-img img {
+   max-height: 32px;
 }
 
-.two-container {
-   max-width: 539px;
-   margin: 0 auto;
-   text-align: left;
+.item-task-one-title {
+   display: inline;
+   vertical-align: middle;
+   color: #ffffff;
+   font-size: 24px;
+   font-weight: 600;
+   line-height: 1.5;
 }
-.two-title {
+.item-task-one-text {
+   line-height: 1.5;
+}
+
+/* ==========================Task Two ======================*/
+.task-two {
+   font-family: Roboto, Arial, Helvetica, sans-serif;
+   background-color: #ffffff;
+   padding-block: 303px;
+   text-align: left;
+   letter-spacing: 1px;
+}
+.task-two-container {
+   max-width: 539px;
+   margin-inline-start: 163.12px;
+   margin-inline-end: auto;
+}
+.task-two-title {
    color: #091133;
    font-size: 50px;
    font-weight: 500;
-   line-height: 1.3; /* 66/50 */
-   letter-spacing: 1px;
+   line-height: 1.32;
    margin-block-end: 20px;
 }
-.two-text {
-   margin-block-end: 74px;
+.task-two-text {
    color: #505f98;
    line-height: 1.67;
-}
-
-.two-button {
-   text-align: center;
-   font-size: 16px;
-   font-weight: 500;
-   line-height: 1.6; /* 26/16 */
-   max-width: 189px;
-   border-radius: 2px;
-   border: 2px solid #091133;
-   padding-block: 5px;
-   padding-inline: 35px;
-   color: #091133;
-   margin-inline-end: 30px;
-}
-
-/* ==========================Task Three ======================*/
-.task-three {
-   padding-block-start: 160px;
-   padding-block-end: 120px;
-   background-color: #fbfbfd;
-}
-.three {
-   font-family: Roboto, Arial, Helvetica, sans-serif;
-   text-align: left;
-   font-weight: 400;
-}
-.three-container {
-   max-width: 520px;
-   margin: 0 auto;
-}
-.three-title {
-   font-size: 36px;
-   font-weight: 500;
-   line-height: 1.33; /* 48/36 */
-   margin-block-end: 16px;
-}
-.three-subtitle {
-   color: #6f7cb2;
-   font-size: 16px;
-   line-height: 1.62; /* 26/16 */
-   margin-block-end: 71px;
-}
-.three-cards {
-   max-width: 520px;
-   margin-inline-start: -15px;
-   margin-inline-end: -30px;
-   display: inline-block;
-}
-.three-card {
-   padding: 15px;
-   display: inline-block;
-}
-.card-three {
-   max-width: 245px;
-}
-.card-three-image {
-   min-height: 36px;
-   margin-block-end: 14px;
-}
-.card-three-title {
-   margin-block-end: 6px;
-}
-.card-three-title h3 {
-   font-size: 16px;
-   font-weight: 500;
-   line-height: 1.62; /* 26/16 */
-   color: #091133;
-}
-.card-three-text {
-   font-size: 12px;
-   color: #5d6970;
-   line-height: 1.5; /* 18/12 */
    font-feature-settings:
       "liga" off,
       "clig" off;
+   margin-block-end: 74px;
+}
+.task-two-buttons {
+   font-size: 0;
+}
+.task-two-button {
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.62;
+   background-color: #091133;
+   color: #ffffff;
+   text-align: center;
+   padding-block: 8px;
+   min-width: 189px;
+}
+#purchase-btn {
+   margin-inline-end: 30.15px;
+}
+
+/* ==========================Task Three ======================*/
+
+.task-three {
+   background-color: #fbfbfd;
+   padding-block-start: 160px;
+   padding-block-end: 88px;
+   text-align: left;
+   font-family: Roboto, Arial, Helvetica, sans-serif;
+}
+.task-three-container {
+   max-width: 520px;
+   margin-inline-start: 165px;
+   margin-inline-end: auto;
+}
+.task-three-title {
+   color: #091133;
+   font-size: 36px;
+   font-weight: 500;
+   line-height: 1.36;
+   margin-block-end: 16px;
+}
+.task-three-text {
+   color: #6f7cb2;
+   font-size: 16px;
+   line-height: 1.62;
+   margin-block-end: 70px;
+}
+.task-three-items {
+   margin-inline-end: -60px;
+   /* margin-inline-start: -30px; */
+}
+.task-three-item {
+   display: inline-block;
+   max-width: 245px;
+   margin-inline-end: 30px;
+   margin-block-end: 32px;
+}
+.task-three-item-img {
+   min-height: 36px;
+   min-width: 36px;
+   margin-block-end: 14px;
+}
+.task-three-item-title {
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.62;
+   margin-block-end: 6px;
+}
+.task-three-item-text {
+   color: #5d6970;
+   font-size: 12px;
+   line-height: 1.5;
+}
+
+/* =========================== footer======================= */
+footer {
+   padding-block: 20px;
+   background-color: lightgray;
 }
