--- a/lesson_06/css/style.css
+++ b/lesson_06/css/style.css
@@ -20,13 +20,17 @@ body {
    padding: 20px;
    color: #ffffff;
 }
+.task-one {
+   background-color: #141414;
+   padding-block-end: 30px;
+}
 
 .task-one-logo {
    background:
       linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, #141414 100%),
       linear-gradient(180deg, #141414 0%, rgba(20, 20, 20, 0) 100%),
-      url("../img/task-one/bg.jpg") 0px 1px / contain no-repeat;
-   min-height: 1092px;
+      url("../img/task-one/bg.jpg") 0px 1px / cover no-repeat;
+   min-height: 860px;
    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
 }
 .task-one-logo-img {
@@ -34,12 +38,21 @@ body {
    margin-inline: auto;
    padding-block: 195px;
 }
+.task-one-logo-img a {
+   display: inline-block;
+   width: 100%;
+   height: 100%;
+   cursor: pointer;
+}
+.task-one-logo-img a:hover {
+   opacity: 0.8;
+}
 
 .task-one-logo img {
    width: 100%;
 }
 .task-one-content {
-   margin-block-start: -300px;
+   margin-block-start: -64px;
    text-align: center;
    line-height: 1.5;
    color: #ffffff;
@@ -56,6 +69,7 @@ body {
    font-size: 58px;
    font-weight: 700;
    margin-block-end: 14px;
+   text-transform: capitalize;
 }
 .task-one-text {
    color: #999999;
