--- a/lesson_07/css/style.css
+++ b/lesson_07/css/style.css
@@ -31,7 +31,6 @@ header h1 {
 
 .task-one-item {
    display: inline-block;
-
    vertical-align: middle;
 }
 
@@ -71,7 +70,7 @@ header h1 {
    font-size: 0;
 }
 
-.content-list > *:not(:last-child) {
+.content-list > li :not(:last-child) {
    margin-bottom: 54px;
 }
 .content-item-counter {
@@ -199,6 +198,7 @@ header h1 {
 }
 .task-three-image img {
    width: 100%;
+   border-radius: 4px;
 }
 
 .task-three-container {
@@ -229,13 +229,12 @@ header h1 {
    line-height: 1.33;
    margin-block-end: 35px;
 }
-.item-task-three-text p {
+.item-task-three-text p:not(:last-child) {
    margin-block-end: 28px;
 }
 
 .unordered-list {
-   margin-block-start: 6px;
-   margin-block-end: 32px;
+   padding-block-end: 32px;
 }
 .unordered-list li {
    position: relative;
@@ -257,6 +256,7 @@ header h1 {
    font-weight: 400;
    line-height: 2;
 }
+
 .ordered-list {
    margin-block-end: 32px;
 }
