--- a/lesson_08/css/style.css
+++ b/lesson_08/css/style.css
@@ -58,7 +58,8 @@ body {
 .main-body {
    border: 2px solid #000;
    padding-inline: 30px;
-   margin-inline: 70px;
+   margin-inline: 40px;
+   text-align: center;
 }
 .main-item {
    display: inline-block;
@@ -66,12 +67,14 @@ body {
 
 .main-item > * {
    display: inline-block;
-   margin-block-end: 10px;
-   padding: 10px;
+   padding: 10px 10px 10px 0px;
+}
+
+.main-body:first-child {
+   padding: 0;
 }
 
 .main-item:last-child {
-   margin-block-end: 10px;
    padding-inline-end: 0px;
 }
 
@@ -92,7 +95,7 @@ body {
    vertical-align: middle;
 }
 .main-item-description > p {
-   padding-block: 10px;
+   padding: 10px 10px 10px 0px;
 }
 
 p span {
