--- a/lesson_08/css/style.css
+++ b/lesson_08/css/style.css
@@ -132,6 +132,11 @@ a span:hover {
    display: inline-block;
    margin-inline: 45px;
    vertical-align: middle;
+   height: 32px;
+}
+.logo-icons-item > img {
+   width: 100%;
+   height: 100%;
 }
 
 .images {
