--- a/lesson_14/css/style.css
+++ b/lesson_14/css/style.css
@@ -18,9 +18,13 @@ body {
 }
 
 .wrapper {
-   height: 100vw;
+   display: flex;
+   flex-direction: column;
    overflow: clip;
    background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
    font-size: 18px;
    background-color: #fff;
+}
+.main {
+   flex-grow: 1;
 }
