--- a/lesson_18/css/advertising.css
+++ b/lesson_18/css/advertising.css
@@ -7,6 +7,7 @@
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
+   gap: 10px;
    grid-auto-rows: auto;
    justify-items: center;
    justify-content: center;
