--- a/lesson_20/css/contact.css
+++ b/lesson_20/css/contact.css
@@ -1,3 +1,4 @@
+@import "variables.css";
 .contact__wrapper {
    position: relative;
    top: 2.5rem;
@@ -40,9 +41,11 @@
    column-gap: 0.8125rem;
    align-items: center;
    border-radius: 0.625rem;
-   transition: all 0.3s;
+   transition:
+      background-color 0.3s,
+      box-shadow 0.3s;
 }
-.address-link--active {
+/* .address-link--active {
    background-color: var(--colorWhite);
    box-shadow: 0px 3.6875rem 7.75rem 0px rgba(0, 0, 0, 0.12);
 }
@@ -51,7 +54,7 @@
 }
 .address-link--active .address-link__image path {
    fill: var(--colorWhite);
-}
+} */
 
 .address-link__image {
    max-width: 3rem;
@@ -59,6 +62,7 @@
    padding: 4%;
    border-radius: 0.25rem;
    background-color: rgba(237, 216, 255, 0.5);
+   transition: all 0.3s;
 }
 .address-link__label {
    margin-block-end: 0.25rem;
@@ -92,7 +96,7 @@
    justify-content: center;
    background-color: var(--colorWhite);
    box-shadow: 0px 0.75rem 4rem 0px rgba(28, 25, 25, 0.12);
-   transition: all 0.3s;
+   transition: background-color 0.3s;
 }
 .contact__social-link svg path {
    fill: var(--colorMain);
@@ -152,8 +156,8 @@ textarea:focus {
    border-bottom: 0.0938rem solid var(--colorLabel);
 }
 .form-group:has(input:focus) label,
-.form-group:has(textarea:focus) {
-   color: var(--colorLabel);
+.form-group:has(textarea:focus) label {
+   color: var(--colorMain);
 }
 .contact__inputs--two-inputs {
    display: flex;
@@ -177,6 +181,7 @@ textarea:focus {
    justify-content: center;
 }
 .contact__button svg {
+   transition: all 0.3s ease 0s;
    transform: translateY(0.0625rem);
 }
 
@@ -187,6 +192,7 @@ textarea:focus {
    }
    .address-link:hover .address-link__image {
       background-color: var(--colorMain);
+      transform: scale(1.2);
    }
    .address-link:hover .address-link__image path {
       fill: var(--colorWhite);
@@ -197,6 +203,11 @@ textarea:focus {
    }
    .contact__social-link:hover > svg path {
       fill: var(--colorWhite);
+   }
+   .contact__button:hover span svg path {
+      fill: var(--colorMain);
+      /* color: var(--colorWhite);
+      box-shadow: 0.125rem 0.125rem 0.3125rem var(--colorMain); */
    }
 }
 
