--- a/lesson_20/css/header.css
+++ b/lesson_20/css/header.css
@@ -1,11 +1,20 @@
+@import "variables.css";
 .header {
    padding-block: 1.25rem;
+   position: relative;
 }
 .header__container {
+   position: relative;
+   top: -10px;
+   left: 0;
+   /* width: 100%;
+   height: 76px; */
    display: flex;
    align-items: center;
    justify-content: space-between;
+   z-index: 20;
 }
+
 .logo {
    display: flex;
    align-items: center;
@@ -56,7 +65,7 @@
       border-bottom 0.3s;
 }
 .menu__link:focus {
-   color: var(--colorMain);
+   color: red;
    outline: none;
    text-decoration: underline;
 }
@@ -75,6 +84,10 @@
    }
 }
 @media (max-width: 62em) {
+   .header {
+      padding-block: 1rem;
+   }
+
    .header__actions {
       display: flex;
       column-gap: 1rem;
@@ -122,7 +135,7 @@
       inline-size: 100%;
       block-size: 100%;
       z-index: 10;
-      background-color: var(--colorGrey);
+      background-color: #f0f1f3;
       padding: 6.25rem 0.9375rem 1.875rem;
       overflow: auto;
       transition:
@@ -133,16 +146,15 @@
       opacity: 0;
       visibility: hidden;
    }
-
-   .menu::before {
+   .open .header__container::before {
       content: "";
       position: fixed;
-      block-size: 4.75rem;
-      inset-inline-start: 100%;
+      block-size: 76px;
+      inset-inline-start: 0;
       inset-block-start: 0;
       inline-size: 100%;
-      z-index: 3;
-      border-color: #fff;
+      z-index: 15;
+      background-color: #f0f1f3;
    }
 
    .open .menu,
@@ -192,18 +204,30 @@
       transition-delay: 0.6s;
    }
 }
+@media (max-width: 50em) {
+   .menu__item {
+      font-size: 1.5rem;
+      font-weight: 600;
+   }
+}
 @media (max-width: 30em) {
    .header {
-      padding-block: 1rem;
+      padding-block: 0.5rem;
+   }
+   .header__container {
+      /* align-items: flex-start; */
+      /* flex-direction: column; */
+      row-gap: 1.5rem;
    }
    .logo {
-      flex-wrap: wrap-reverse;
+      flex-wrap: wrap;
       column-gap: 0.2rem;
    }
+
    .logo__icon {
       width: 2.5rem;
       height: 2.5rem;
-      align-self: start;
+      /* align-self: start; */
    }
    .logo__text {
       font-size: 1.875rem;
@@ -211,7 +235,14 @@
    .header__actions {
       column-gap: 2rem;
    }
-   .header__container {
-      align-items: start;
+}
+@media (max-width: 25em) {
+   .logo__icon {
+      width: 2rem;
+      height: 2rem;
+      /* align-self: start; */
+   }
+   .logo__text {
+      font-size: 24px;
    }
 }
