--- a/lesson_20/css/hero.css
+++ b/lesson_20/css/hero.css
@@ -1,3 +1,4 @@
+@import "variables.css";
 .hero {
    padding-block: 7.875rem 13.875rem;
    background-color: #f0f1f3;
@@ -21,6 +22,23 @@
 
 .content__hat.hat {
    row-gap: 1.5rem;
+}
+.content__hat .hat__text p strong {
+   position: relative;
+   z-index: 1;
+   font-weight: 600;
+}
+.content__hat .hat__text p strong::before {
+   content: "";
+   display: inline-block;
+   position: absolute;
+   top: 50%;
+   left: -0.125rem;
+   right: -0.125rem;
+   z-index: -1;
+   /* width: 100%; */
+   height: 0.5rem;
+   background-color: rgba(237, 216, 255, 0.9);
 }
 .info {
    display: flex;
@@ -49,13 +67,13 @@
 }
 
 .hero__image {
-   margin-top: -3.25rem;
-   height: 100%;
+   width: 100%;
    overflow: hidden;
-   flex-basis: 33.5rem;
+   /* flex-basis: 33.5rem; */
    border-radius: 1.5625rem;
    flex-grow: 1;
    flex-shrink: 1;
+   flex-basis: 636px;
    position: relative;
    aspect-ratio: 536 / 636;
    box-shadow: 0rem 1.5rem 7.25rem 0rem rgba(43, 56, 76, 0.09);
@@ -65,8 +83,7 @@
    width: 100%;
    object-fit: cover;
    position: relative;
-   height: 138%;
-   top: -16.2%;
+   top: 0;
    left: 0;
 }
 
@@ -87,7 +104,7 @@
 
 @media (max-width: 62em) {
    .hero {
-      padding-block: 3.875rem 4.875rem;
+      padding-block: 4.875rem 4.875rem;
    }
    .hero__container {
       flex-direction: column;
@@ -99,23 +116,26 @@
    }
 
    .content__hat {
-      max-width: 60%;
+      max-width: 85%;
       margin-inline: auto;
    }
    .hero__image {
-      margin-top: 0rem;
+      flex-basis: auto;
    }
 }
 
 @media (max-width: 49em) {
    .hero {
-      padding-block: 2rem 2rem;
+      padding-block: 3.875rem 2rem;
    }
    .content__hat {
       max-width: 80%;
    }
 }
 @media (max-width: 44em) {
+   .hero {
+      padding-block-start: 4rem;
+   }
    .content__hat {
       max-width: 90%;
    }
