--- a/lesson_20/css/portfolio.css
+++ b/lesson_20/css/portfolio.css
@@ -20,10 +20,13 @@
 .item-portfolio {
    display: flex;
    flex-direction: column;
-
    border-radius: 0.5rem;
    border: 1px solid #e6e8eb;
    box-shadow: 0rem 0.75rem 4rem 0rem rgba(28, 25, 25, 0.12);
+}
+.item-portfolio__image {
+   aspect-ratio: 424 / 248;
+   flex: 1 1 248px;
 }
 .item-portfolio__image img {
    width: 100%;
@@ -53,9 +56,12 @@
    margin-block-end: 1.25rem;
 }
 .item-portfolio__button {
-   inline-size: 50%;
+   inline-size: 12.5rem;
    font-weight: 600;
    line-height: 1.5;
+}
+.item-portfolio__button svg {
+   flex-shrink: 0;
 }
 .portfolio__button {
    margin-inline: auto;
