--- a/lesson_20/css/presentation.css
+++ b/lesson_20/css/presentation.css
@@ -1,5 +1,7 @@
+@import "variables.css";
 .presentation {
    position: relative;
+   margin-block-end: -112px;
 }
 .presentation::before {
    content: "";
@@ -8,12 +10,11 @@
    left: -6.25rem;
    width: 100%;
    height: 100%;
-   background: url(../img/presentation/Ellipse_1.svg) no-repeat 0 0 / cover;
-   /* z-index: -1; */
+   background: url(../img/presentation/Ellipse_1.svg) no-repeat center / cover;
+   z-index: -1;
 }
 .presentation__wrapper {
    position: relative;
-   top: 112px;
    padding: 7rem;
    display: flex;
    column-gap: 8.5rem;
@@ -24,14 +25,14 @@
 }
 .presentation__picture {
    flex-basis: 26.5rem;
-   flex-grow: 0;
+   flex-grow: 1;
    flex-shrink: 1;
    position: relative;
    overflow: hidden;
 }
 .presentation__content {
    flex-basis: 33.5rem;
-   flex-grow: 1;
+   flex-grow: 0;
    flex-shrink: 1;
 }
 .presentation__content .content__hat {
@@ -45,53 +46,58 @@
    max-width: 100%;
    overflow: hidden;
    aspect-ratio: 424 / 468;
-   position: relative;
 }
 .presentation__image img {
    width: 100%;
    object-fit: cover;
-   height: 140%;
-   position: relative;
-   top: -4.1875rem;
-   left: 0;
 }
 .presentation__aside-social {
-   max-width: 62%;
+   text-align: center;
    margin: 0 auto;
-   position: relative;
+   max-width: 75%;
    transform: translateY(-50%);
+   position: relative;
    min-height: 4.5rem;
    background-color: var(--colorWhite);
-   padding: 0.75rem;
+   padding: 12px;
    border-radius: 0.25rem;
 }
 
 .aside-social__list {
    display: flex;
+   max-width: 100%;
    align-content: center;
    justify-content: center;
+   overflow: auto;
 }
 .aside-social__item {
-   flex-basis: 3rem;
+   flex-basis: 48px;
+   height: 48px;
+   width: 48px;
    flex-grow: 0;
    flex-shrink: 1;
-   padding: 0.9375rem;
+   display: flex;
+   align-items: center;
+   justify-content: center;
    border-radius: 0.25rem;
    transition: background-color 0.3s;
 }
 .aside-social__link {
-   width: 1.125rem;
-   height: 1.125rem;
+   max-width: 1.125rem;
+   max-height: 1.125rem;
+   aspect-ratio: 1 / 1;
+   transition: all 0.3s ease 0s;
 }
 
 .aside-social__link svg path {
    fill: #a53dff;
+
    transition:
       fill 0.3s,
       transform 0.3s,
       background-color 0.3s;
 }
-.aside-social__item--active {
+/* .aside-social__item--active {
    background-color: var(--colorMain);
 }
 .aside-social__item--active .aside-social__link {
@@ -100,30 +106,38 @@
 }
 .aside-social__item--active .aside-social__link svg path {
    fill: var(--colorWhite);
-}
+} */
 
 @media (any-hover: hover) {
-   .aside-social__item:hover {
+   .aside-social__item:hover,
+   .aside-social__item:hover .aside-social__link {
       background-color: var(--colorMain);
    }
-   .aside-social__item:hover > .aside-social__link {
-      transform: scale(1.2);
-      background-color: var(--colorMain);
-   }
-   .aside-social__item:hover > .aside-social__link svg path {
+
+   .aside-social__item:hover .aside-social__link svg path {
       fill: var(--colorWhite);
    }
 }
 @media (max-width: 76.76em) {
+   .presentation {
+      margin-block-end: -4.125rem;
+   }
    .presentation__wrapper {
       padding: 4rem;
       column-gap: 4rem;
    }
    .presentation__aside-social {
-      max-width: 80%;
+      max-width: 60%;
+      padding: 6px;
+   }
+   .aside-social__list {
+      flex-wrap: wrap;
    }
 }
 @media (max-width: 62em) {
+   .presentation {
+      margin-block-end: 0;
+   }
    .presentation__wrapper {
       padding: 2.5rem;
       flex-wrap: wrap-reverse;
@@ -131,11 +145,14 @@
       top: 0;
    }
    .presentation__content .content__hat {
-      max-width: 80%;
+      max-width: 85%;
    }
    .presentation .presentation__picture {
       flex-basis: 60%;
       margin-inline: auto;
+   }
+   .presentation__aside-social {
+      max-width: 50%;
    }
 }
 @media (max-width: 45em) {
@@ -151,7 +168,7 @@
       flex-direction: column;
    }
    .presentation__aside-social {
-      max-width: 90%;
+      max-width: 70%;
    }
 }
 @media (max-width: 40.25em) {
@@ -164,7 +181,8 @@
       left: 0;
    }
    .presentation__aside-social {
-      max-width: 100%;
+      transform: translateY(-15px);
+      max-width: 80%;
    }
 }
 @media (max-width: 31.5em) {
@@ -178,12 +196,12 @@
       position: relative;
    }
    .presentation__aside-social {
-      position: absolute;
-      width: 100%;
-      bottom: -10%;
-      left: 0;
-      right: 0;
-      margin: auto;
-      /* display: none; */
+      max-width: 90%;
+   }
+}
+@media (max-width: 25em) {
+   .presentation__aside-social {
+      max-width: 100%;
+      transform: translateY(0);
    }
 }
