--- a/lesson_20/css/what.css
+++ b/lesson_20/css/what.css
@@ -23,19 +23,21 @@
    gap: 1rem;
    border-radius: 0.375rem;
    background: #fff;
+   border-left: 0.3125rem solid transparent;
 }
-.item-skills--active {
-   box-shadow: 0rem 2rem 6rem 0rem rgba(28, 25, 25, 0.16);
-   border-left: 0.3125rem solid var(--colorMain);
-}
+
 .item-skills__text {
+   flex: 1 1 72px;
    font-size: 1rem;
    line-height: 1.5;
    color: var(--colorTextWhat);
 }
-.skills__item:hover:not(.item-skills--active) {
+.item-skills__text p:not(:last-child) {
+   margin-block-end: 1rem;
+}
+.skills__item:hover {
    background: #fff;
-   box-shadow: 0px 2rem 6rem 0rem rgba(28, 25, 25, 0.16);
+   box-shadow: 0rem 2rem 6rem 0rem rgba(28, 25, 25, 0.16);
    border-left: 0.3125rem solid var(--colorMain);
 }
 @media (max-width: 76.76em) {
