--- a/lesson_20/css/work-process.css
+++ b/lesson_20/css/work-process.css
@@ -17,50 +17,43 @@
 
 .work-process__items {
    flex: 1 1 auto;
-   display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(312px, 1fr));
+   display: flex;
+   flex-wrap: wrap;
    gap: 24px;
-   grid-template-rows: 24px 252px 24px 252px 24px;
-   grid-row: auto;
 }
 .item-process {
+   flex: 1 1 45%;
    aspect-ratio: 312 / 276;
 }
 
-.work-process__item:nth-child(4n + 1) {
-   grid-row: 1 / span 2;
-   grid-column: 1 / 2;
+.work-process__item:nth-child(odd) {
+   margin-block-start: 24px;
 }
-.work-process__item:nth-child(4n + 2) {
-   grid-row: 2 / span 2;
-   grid-column: 2 / 3;
+
+.item-process__icon {
+   flex: 0 1 auto;
 }
-.work-process__item:nth-child(4n + 3) {
-   grid-row: 3 / span 2;
-   grid-column: 1 / 2;
-}
-.work-process__item:nth-child(4n + 4) {
-   grid-row: 4 / span 2;
-   grid-column: 2 / 3;
+.item-process__content {
+   flex: 1 1 auto;
 }
 .item-process {
-   padding: 32px;
+   padding: 2rem;
    background-color: var(--colorWhite);
-   border-radius: 12px;
-   box-shadow: 32px 32px 124px 0px rgba(43, 56, 76, 0.1);
+   border-radius: 0.75rem;
+   box-shadow: 2rem 2rem 7.75rem 0rem rgba(43, 56, 76, 0.1);
    display: flex;
    flex-direction: column;
-   row-gap: 32px;
+   row-gap: 2rem;
    transition: all 0.3s;
 }
 .item-process__title {
    font-weight: 600;
-   line-height: 24px;
-   margin-block-end: 12px;
+   line-height: 1.5rem;
+   margin-block-end: 0.75rem;
    text-transform: capitalize;
 }
 .item-process__text {
-   font-size: 16px;
+   font-size: 1rem;
    line-height: 1.5;
    color: var(--colorBlackText);
 }
@@ -79,24 +72,33 @@
 }
 @media (max-width: 76.76em) {
    .work-process__container {
-      gap: 40px;
+      gap: 2.5rem;
    }
    .work-process {
-      padding-block: 200px 100px;
+      padding-block: 12.5rem 6.25rem;
    }
 }
 
 @media (max-width: 66.25em) {
    .work-process {
-      padding-block: 100px 80px;
+      padding-block: 100px 5rem;
    }
    .work-process__container {
       flex-direction: column;
-      row-gap: 40px;
+      row-gap: 2.5rem;
    }
    .work-process__hat {
       flex: 1 1 auto;
       inline-size: 65%;
+   }
+   .work-process__items {
+      flex: 1 1 auto;
+   }
+   .item-process {
+      flex: 1 1 45%;
+   }
+   .work-process__item:nth-child(odd) {
+      margin-block-start: 0;
    }
 }
 
@@ -108,60 +110,33 @@
       inline-size: 85%;
    }
    .work-process__items {
-      grid-template-columns: repeat(auto-fit, minmax(152px, 1fr));
-      grid-template-rows: auto;
       gap: 16px;
       padding: 15px;
-   }
-   .work-process__item:nth-child(4n + 1) {
-      grid-row: 1 / 2;
-      grid-column: 1 / 2;
-   }
-   .work-process__item:nth-child(4n + 2) {
-      grid-row: 1 / 2;
-      grid-column: 2 / 3;
-   }
-   .work-process__item:nth-child(4n + 3) {
-      grid-row: 2 / 3;
-      grid-column: 1 / 2;
-   }
-   .work-process__item:nth-child(4n + 4) {
-      grid-row: 2 / 3;
-      grid-column: 2 / 3;
    }
 }
 
 @media (max-width: 40em) {
+   .work-process {
+      padding-block: 30px;
+   }
    .work-process__hat {
       inline-size: 100%;
    }
    .work-process__items {
-      grid-template-columns: auto;
-      grid-template-rows: auto;
       gap: 16px;
       padding: 15px;
    }
-   .work-process__item:nth-child(4n + 1) {
-      grid-row: 1 / 2;
-      grid-column: 1 / 2;
-   }
-   .work-process__item:nth-child(4n + 2) {
-      grid-row: 2 / 3;
-      grid-column: 1 / 2;
-   }
-   .work-process__item:nth-child(4n + 3) {
-      grid-row: 3 / 4;
-      grid-column: 1 / 2;
-   }
-   .work-process__item:nth-child(4n + 4) {
-      grid-row: 4/ 5;
-      grid-column: 1 / 2;
-   }
+
    .item-process {
       max-width: 100%;
       aspect-ratio: auto;
       flex-direction: column;
       padding: 32px 24px;
       column-gap: 24px;
+   }
+}
+@media (max-width: 30em) {
+   .work-process__items {
+      flex-direction: column;
    }
 }
