--- a/Mockup/css/style.css
+++ b/Mockup/css/style.css
@@ -94,6 +94,82 @@ table {
   text-transform: uppercase;
   cursor: pointer;
 }
+.button-actions {
+  padding: 0.5rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+.button-actions img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (any-hover: hover) {
+  .button-actions:hover {
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+}
+.button-actions--scan {
+  background-color: #334a41;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.625rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 0.9375rem;
+  max-height: 52px;
+  max-width: 52px;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  aspect-ratio: 1/1;
+}
+
+.errow-link {
+  max-width: 1.5rem;
+  max-height: 1.5rem;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+.errow-link img {
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (any-hover: hover) {
+  .errow-link:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+}
+.errow-link--prewious {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+@media (any-hover: hover) {
+  .errow-link--prewious:hover {
+    cursor: pointer;
+    -webkit-transform: rotate(180deg) scale(1.05);
+        -ms-transform: rotate(180deg) scale(1.05);
+            transform: rotate(180deg) scale(1.05);
+  }
+}
 
 .title {
   font-size: 1.5rem;
@@ -120,9 +196,8 @@ table {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1px;
-  width: 100px;
-  max-height: 44px;
+  min-width: 6.375rem;
+  min-height: 2.85625rem;
 }
 .logo span {
   display: -webkit-box;
@@ -139,16 +214,14 @@ table {
       -ms-flex: 0 1 16.6%;
           flex: 0 1 16.6%;
   font-weight: 700;
-  font-size: 12px;
+  font-size: 0.75rem;
   line-height: normal;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: 0.0625rem;
 }
 
 .modal {
-  width: 92%;
-  padding-block: 1.5rem 1.0625rem;
-  padding-inline: 1.5rem;
+  padding-block: 1.5rem 0.75rem;
   border-radius: 1.5625rem;
   -webkit-box-shadow: 0px -3px 25px 5px rgba(0, 88, 171, 0.07);
           box-shadow: 0px -3px 25px 5px rgba(0, 88, 171, 0.07);
@@ -163,11 +236,29 @@ table {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-inline: 1.5rem;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.modal__icon {
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 .modal__icon img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media (any-hover: hover) {
+  .modal__icon:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+  }
 }
 .modal__icon-home {
   display: -webkit-inline-box;
@@ -187,15 +278,63 @@ table {
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
+@media (any-hover: hover) {
+  .modal__icon-home:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+}
+
+.expland {
+  -webkit-padding-before: 0.875rem;
+          padding-block-start: 0.875rem;
+}
+.expland__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  row-gap: 0.625rem;
+  -webkit-margin-after: 1.75rem;
+          margin-block-end: 1.75rem;
+}
+.expland__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 0.625rem;
+}
+.expland__item {
+  background-color: #364d44;
+  border-radius: 0.9375rem;
+  height: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-padding-start: 1.25rem;
+          padding-inline-start: 1.25rem;
+  color: #fff;
+  font-size: 0.875rem;
+}
 
 .header {
-  padding-block: 1.4375rem 0.875rem;
+  padding-block: 1.4375rem 0.75rem;
   border-bottom: 1px solid rgba(4, 33, 21, 0.2);
-}
-@media (max-width: 48em) {
-  .header {
-    padding-block: 1.4375rem 0.875rem;
-  }
 }
 .header__container {
   display: -webkit-box;
@@ -208,7 +347,9 @@ table {
       -ms-flex-align: center;
           align-items: center;
 }
-.header__actions {
+
+.actions-header {
+  padding-inline: 1.875rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -218,37 +359,28 @@ table {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-column-gap: 1.5rem;
-     -moz-column-gap: 1.5rem;
-          column-gap: 1.5rem;
+  -webkit-column-gap: 0.875rem;
+     -moz-column-gap: 0.875rem;
+          column-gap: 0.875rem;
 }
-.header--search .header__actions {
-  -webkit-padding-end: 1.875rem;
-          padding-inline-end: 1.875rem;
-}
-
-.actions__item {
-  width: 24px;
-  height: 24px;
-}
-.actions__item img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+.actions-header__item {
+  max-width: 2.125rem;
+  max-height: 2.125rem;
+  padding: 0.125rem;
 }
 
-.hero {
+.search {
   padding-block: 0.9375rem;
 }
-.hero--margineBlockEnd {
+.search--margineBlockEnd {
   -webkit-margin-after: 3.125rem;
           margin-block-end: 3.125rem;
 }
-.hero__title {
+.search__title {
   -webkit-margin-after: 0.9375rem;
           margin-block-end: 0.9375rem;
 }
-.search-hero {
+.actions-search {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -261,10 +393,13 @@ table {
   max-width: 100%;
   margin-inline: auto;
 }
-.search-hero__input {
+.actions-search__input {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+
+.input-actions-search {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -280,47 +415,29 @@ table {
   border-radius: 15px;
   padding-inline: 1.125rem 0.625rem;
 }
-@media (max-width: 22.375em) {
-  .search-hero__input {
-    -webkit-column-gap: 0rem;
-       -moz-column-gap: 0rem;
-            column-gap: 0rem;
-    padding-inline: 0.625rem 0.625rem;
+@media (max-width: 23.4375em) {
+  .input-actions-search {
+    -webkit-column-gap: 0.3125rem;
+       -moz-column-gap: 0.3125rem;
+            column-gap: 0.3125rem;
+    padding-inline: 0.4375rem 0.625rem;
     font-size: 1rem;
   }
 }
-.search-hero__input input {
+.input-actions-search input {
   border: none;
   outline: none;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  width: 100%;
 }
-.search-hero .input-search-hero__img {
+.input-actions-search__img {
+  padding: 0.1875rem;
   max-height: 1.5rem;
   max-width: 1.5rem;
 }
-.search-hero .input-search-hero__img img {
+.input-actions-search__img img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-}
-.search-hero__button {
-  background-color: #334a41;
-  padding: 0.875rem;
-  border-radius: 0.9375rem;
-  -ms-flex-preferred-size: 52px;
-      flex-basis: 52px;
-  max-height: 52px;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-}
-.search-hero__button img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  aspect-ratio: 1/1;
 }
 
 .products__item:not(:last-child) {
@@ -342,38 +459,28 @@ table {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.header-item-product__link {
-  max-width: 1.5rem;
-  max-height: 1.5rem;
-}
-.header-item-product__link img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .slider {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-column-gap: 1.0625rem;
      -moz-column-gap: 1.0625rem;
           column-gap: 1.0625rem;
-  overflow: auto;
+  overflow-x: auto;
+  scroll-behavior: smooth;
 }
-.slider__item {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 153px;
-          flex: 0 0 153px;
+.slider::-webkit-scrollbar {
+  display: none;
 }
-
 .item-slider {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 40%;
+  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -396,11 +503,23 @@ table {
   aspect-ratio: 153/223;
   border-radius: 1.5625rem;
   overflow: hidden;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 .item-slider__img img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media (any-hover: hover) {
+  .item-slider__img:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+  }
 }
 
 .main--search .hero .search-hero {
@@ -552,6 +671,10 @@ table {
   line-height: 1.02;
 }
 
+.exit {
+  padding-block: 1.1875rem;
+}
+
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -567,14 +690,18 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.wrapper .main {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-
 [class*=__container] {
-  max-width: 1308px;
+  max-width: 414px;
   margin: 0 auto;
   padding: 0 0.9375rem;
+}
+@media (max-width: 25.875em) {
+  [class*=__container] {
+    padding: 0 0.625rem;
+  }
+}
+@media (max-width: 23.4375em) {
+  [class*=__container] {
+    padding: 0 0.3125rem;
+  }
 }
